--- a/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/package.json
+++ b/OneDrive/Desktop/GAunit2/delivs/love-it-or-leave-it/package.json
@@ -1,7 +1,6 @@
 {
   "name": "love-it-or-leave-it",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "ejs": "^3.1.5",
@@ -13,5 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "description": ""
 }
